--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newportfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "http://mrprofessor.github.io/newportfolio",
+  "homepage": "http://mrprofessor.github.io/",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
