--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-typist": "^1.1.1",
-    "react-typist-loop": "0.0.3",
-    "typed.js": "^2.0.6"
+    "react-typist-loop": "0.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
