--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
   "short_name": "Mrprofessor's blog",
   "name": "Rudra Narayan's blog",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  // "icons": [
+  //   {
+  //     "src": "favicon.ico",
+  //     "sizes": "192x192",
+  //     "type": "image/png"
+  //   }
+  // ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
