--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "4.0.0",
     "react": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-typist": "^1.1.1",
-    "react-typist-loop": "0.0.3"
+    "react-typist-loop": "0.0.3",
+    "rss-to-json": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
